Correcion de error el compra (mensaje)

--- a/bot/languages/ar.json
+++ b/bot/languages/ar.json
@@ -6,7 +6,7 @@
   "buyVip": "اشترِ VIP للحصول على خصومات لمدة 30 يومًا.",
   "shopListTitle": "**قائمة الأسعار والمكافآت:**\n",
   "purchaseInit": "عملية شراء معلقة",
-  "purchaseInitContent": "لقد اخترت شراء {item}\n\nاضغط [هنا]({url}) لإكمال عملية الدفع بمبلغ {price} €. لديك 15 دقيقة لإكمال الشراء.",
+  "purchaseInitContent": "لقد اخترت شراء {category}\n\nاضغط [هنا]({url}) لإكمال عملية الدفع بمبلغ {price} €. لديك 15 دقيقة لإكمال الشراء.",
   "buyTimeExceptionContent": "تم إلغاء عملية الشراء لأنه قد مر أكثر من 10 دقائق.",
   "purchaseSuccess": "🛒 تمت العملية بنجاح",
   "purchaseSuccessContent": "لقد اشتريت ``{quantity} x {item}`` بمبلغ {price} € بنجاح!",
