--- a/bot/languages/hi.json
+++ b/bot/languages/hi.json
@@ -6,7 +6,7 @@
   "buyVip": "30 दिनों के लिए छूट प्राप्त करने के लिए VIP खरीदें।",
   "shopListTitle": "**मूल्य और पुरस्कार सूची:**\n",
   "purchaseInit": "खरीदारी लंबित",
-  "purchaseInitContent": "आपने {item} खरीदने का चयन किया है\n\nअपने भुगतान को {price} € पूरा करने के लिए [यहां]({url}) क्लिक करें। आपके पास खरीदारी को पूरा करने के लिए 15 मिनट हैं।",
+  "purchaseInitContent": "आपने {category} खरीदने का चयन किया है\n\nअपने भुगतान को {price} € पूरा करने के लिए [यहां]({url}) क्लिक करें। आपके पास खरीदारी को पूरा करने के लिए 15 मिनट हैं।",
   "buyTimeExceptionContent": "खरीदारी रद्द कर दी गई है क्योंकि पहले ही 10 मिनट हो चुके हैं।",
   "purchaseSuccess": "🛒 खरीदारी पूर्ण",
   "purchaseSuccessContent": "आपकी ``{quantity} x {item}`` की खरीदारी {price} € के लिए सफलतापूर्वक पूरी हो गई है!",
