--- a/bot/languages/el.json
+++ b/bot/languages/el.json
@@ -6,7 +6,7 @@
   "buyVip": "Αγόρασε VIP για εκπτώσεις για 30 ημέρες.",
   "shopListTitle": "**Λίστα τιμών και ανταμοιβών:**\n",
   "purchaseInit": "Εκκρεμής αγορά",
-  "purchaseInitContent": "Έχετε επιλέξει να αγοράσετε {item}\n\nΚάντε κλικ [εδώ]({url}) για να ολοκληρώσετε την πληρωμή σας των {price} €. Έχετε 15 λεπτά για να ολοκληρώσετε την αγορά.",
+  "purchaseInitContent": "Έχετε επιλέξει να αγοράσετε {category}\n\nΚάντε κλικ [εδώ]({url}) για να ολοκληρώσετε την πληρωμή σας των {price} €. Έχετε 15 λεπτά για να ολοκληρώσετε την αγορά.",
   "buyTimeExceptionContent": "Η αγορά ακυρώθηκε καθώς πέρασαν ήδη 10 λεπτά.",
   "purchaseSuccess": "🛒 Αγορά Ολοκληρώθηκε",
   "purchaseSuccessContent": "Η αγορά σας για ``{quantity} x {item}`` αξίας {price} € ολοκληρώθηκε με επιτυχία!",
