--- a/bot/languages/it.json
+++ b/bot/languages/it.json
@@ -6,7 +6,7 @@
   "buyVip": "Acquista VIP per ottenere sconti per 30 giorni.",
   "shopListTitle": "**Lista dei prezzi e delle ricompense:**\n",
   "purchaseInit": "Acquisto in sospeso",
-  "purchaseInitContent": "Hai selezionato di acquistare {item}\n\nClicca [qui]({url}) per completare il pagamento di {price} €. Hai 15 minuti per completare l'acquisto.",
+  "purchaseInitContent": "Hai selezionato di acquistare {category}\n\nClicca [qui]({url}) per completare il pagamento di {price} €. Hai 15 minuti per completare l'acquisto.",
   "buyTimeExceptionContent": "L'acquisto è stato annullato perché sono già passati 10 minuti.",
   "purchaseSuccess": "🛒 Acquisto completato",
   "purchaseSuccessContent": "L'acquisto di ``{quantity} x {item}`` per {price} € è stato completato con successo!",
